// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AST to AST to create AST — meta 🤯 1`] = `
"t.nodes.selectStmt({
  targetList: [t.nodes.resTarget({
    val: t.nodes.columnRef({
      fields: [t.nodes.aStar({})]
    })
  })],
  fromClause: [t.nodes.rangeVar({
    relname: "some_amazing_table",
    inh: true,
    relpersistence: "p"
  })],
  limitOption: "LIMIT_OPTION_DEFAULT",
  op: "SETOP_NONE"
})"
`;

exports[`Complex AST with runtime schema — mixed wrapped/unwrapped patterns 1`] = `
"t.nodes.selectStmt({
  targetList: [t.nodes.resTarget({
    val: t.nodes.columnRef({
      fields: [t.nodes.aStar({})]
    })
  })],
  limitOption: "LIMIT_OPTION_DEFAULT",
  withClause: t.ast.withClause({
    ctes: [t.nodes.commonTableExpr({
      ctename: "test_cte",
      ctequery: t.nodes.selectStmt({
        targetList: [t.nodes.resTarget({
          val: t.nodes.columnRef({
            fields: [t.nodes.string({
              sval: "id"
            })]
          })
        })],
        limitOption: "LIMIT_OPTION_DEFAULT"
      })
    })],
    recursive: false
  }),
  op: "SETOP_NONE"
})"
`;

exports[`Complex AST — Advanced SQL with CTEs, Window Functions, Joins, and Subqueries 1`] = `
"t.nodes.selectStmt({
  targetList: [t.nodes.resTarget({
    name: "customer_name",
    val: t.nodes.columnRef({
      fields: [t.nodes.string({
        sval: "c"
      }), t.nodes.string({
        sval: "name"
      })]
    })
  }), t.nodes.resTarget({
    name: "total_sales",
    val: t.nodes.columnRef({
      fields: [t.nodes.string({
        sval: "cr"
      }), t.nodes.string({
        sval: "total_sales"
      })]
    })
  }), t.nodes.resTarget({
    name: "sales_rank",
    val: t.nodes.columnRef({
      fields: [t.nodes.string({
        sval: "cr"
      }), t.nodes.string({
        sval: "sales_rank"
      })]
    })
  }), t.nodes.resTarget({
    name: "customer_tier",
    val: t.nodes.caseExpr({
      args: [t.nodes.caseWhen({
        expr: t.nodes.aExpr({
          kind: "AEXPR_OP",
          name: [t.nodes.string({
            sval: "<="
          })],
          lexpr: t.nodes.columnRef({
            fields: [t.nodes.string({
              sval: "cr"
            }), t.nodes.string({
              sval: "sales_rank"
            })]
          }),
          rexpr: t.nodes.aConst({
            ival: t.ast.ival({})
          })
        }),
        result: t.nodes.aConst({
          sval: t.ast.sval({
            0: "P",
            1: "r",
            2: "e",
            3: "m",
            4: "i",
            5: "u",
            6: "m"
          })
        })
      }), t.nodes.caseWhen({
        expr: t.nodes.aExpr({
          kind: "AEXPR_OP",
          name: [t.nodes.string({
            sval: "<="
          })],
          lexpr: t.nodes.columnRef({
            fields: [t.nodes.string({
              sval: "cr"
            }), t.nodes.string({
              sval: "sales_rank"
            })]
          }),
          rexpr: t.nodes.aConst({
            ival: t.ast.ival({})
          })
        }),
        result: t.nodes.aConst({
          sval: t.ast.sval({
            0: "G",
            1: "o",
            2: "l",
            3: "d"
          })
        })
      }), t.nodes.caseWhen({
        expr: t.nodes.aExpr({
          kind: "AEXPR_OP",
          name: [t.nodes.string({
            sval: "<="
          })],
          lexpr: t.nodes.columnRef({
            fields: [t.nodes.string({
              sval: "cr"
            }), t.nodes.string({
              sval: "sales_rank"
            })]
          }),
          rexpr: t.nodes.aConst({
            ival: t.ast.ival({})
          })
        }),
        result: t.nodes.aConst({
          sval: t.ast.sval({
            0: "S",
            1: "i",
            2: "l",
            3: "v",
            4: "e",
            5: "r"
          })
        })
      })],
      defresult: t.nodes.aConst({
        sval: t.ast.sval({
          0: "B",
          1: "r",
          2: "o",
          3: "n",
          4: "z",
          5: "e"
        })
      })
    })
  }), t.nodes.resTarget({
    name: "recent_order_count",
    val: t.nodes.subLink({
      subLinkType: "EXPR_SUBLINK",
      subselect: t.nodes.selectStmt({
        targetList: [t.nodes.resTarget({
          val: t.nodes.funcCall({
            funcname: [t.nodes.string({
              sval: "count"
            })],
            args: [t.nodes.aStar({})]
          })
        })],
        fromClause: [t.nodes.rangeVar({
          relname: "orders",
          inh: true,
          relpersistence: "p",
          alias: t.ast.aliasname({
            0: "o",
            1: "2"
          })
        })],
        whereClause: t.nodes.boolExpr({
          boolop: "AND_EXPR",
          args: [t.nodes.aExpr({
            kind: "AEXPR_OP",
            name: [t.nodes.string({
              sval: "="
            })],
            lexpr: t.nodes.columnRef({
              fields: [t.nodes.string({
                sval: "o2"
              }), t.nodes.string({
                sval: "customer_id"
              })]
            }),
            rexpr: t.nodes.columnRef({
              fields: [t.nodes.string({
                sval: "c"
              }), t.nodes.string({
                sval: "id"
              })]
            })
          }), t.nodes.aExpr({
            kind: "AEXPR_OP",
            name: [t.nodes.string({
              sval: ">="
            })],
            lexpr: t.nodes.columnRef({
              fields: [t.nodes.string({
                sval: "o2"
              }), t.nodes.string({
                sval: "order_date"
              })]
            }),
            rexpr: t.nodes.funcCall({
              funcname: [t.nodes.string({
                sval: "current_date"
              })],
              args: []
            })
          })]
        }),
        limitOption: "LIMIT_OPTION_DEFAULT",
        op: "SETOP_NONE"
      })
    })
  })],
  fromClause: [t.nodes.joinExpr({
    jointype: "JOIN_INNER",
    larg: t.nodes.rangeVar({
      relname: "customers",
      inh: true,
      relpersistence: "p",
      alias: t.ast.aliasname({
        0: "c"
      })
    }),
    rarg: t.nodes.rangeVar({
      relname: "customer_rankings",
      inh: true,
      relpersistence: "p",
      alias: t.ast.aliasname({
        0: "c",
        1: "r"
      })
    }),
    quals: t.nodes.aExpr({
      kind: "AEXPR_OP",
      name: [t.nodes.string({
        sval: "="
      })],
      lexpr: t.nodes.columnRef({
        fields: [t.nodes.string({
          sval: "c"
        }), t.nodes.string({
          sval: "id"
        })]
      }),
      rexpr: t.nodes.columnRef({
        fields: [t.nodes.string({
          sval: "cr"
        }), t.nodes.string({
          sval: "customer_id"
        })]
      })
    })
  })],
  whereClause: t.nodes.boolExpr({
    boolop: "AND_EXPR",
    args: [t.nodes.aExpr({
      kind: "AEXPR_OP",
      name: [t.nodes.string({
        sval: ">"
      })],
      lexpr: t.nodes.columnRef({
        fields: [t.nodes.string({
          sval: "cr"
        }), t.nodes.string({
          sval: "total_sales"
        })]
      }),
      rexpr: t.nodes.aConst({
        ival: t.ast.ival({})
      })
    }), t.nodes.aExpr({
      kind: "AEXPR_OP",
      name: [t.nodes.string({
        sval: "IS NOT"
      })],
      lexpr: t.nodes.columnRef({
        fields: [t.nodes.string({
          sval: "c"
        }), t.nodes.string({
          sval: "status"
        })]
      }),
      rexpr: t.nodes.aConst({
        sval: t.ast.sval({
          0: "i",
          1: "n",
          2: "a",
          3: "c",
          4: "t",
          5: "i",
          6: "v",
          7: "e"
        })
      })
    })]
  }),
  sortClause: [t.nodes.sortBy({
    node: t.nodes.columnRef({
      fields: [t.nodes.string({
        sval: "cr"
      }), t.nodes.string({
        sval: "sales_rank"
      })]
    }),
    sortby_dir: "SORTBY_ASC",
    sortby_nulls: "SORTBY_NULLS_DEFAULT"
  })],
  limitCount: t.nodes.aConst({
    ival: t.ast.ival({})
  }),
  limitOption: "LIMIT_OPTION_COUNT",
  withClause: t.ast.withClause({
    ctes: [t.nodes.commonTableExpr({
      ctename: "sales_summary",
      ctequery: t.nodes.selectStmt({
        targetList: [t.nodes.resTarget({
          name: "customer_id",
          val: t.nodes.columnRef({
            fields: [t.nodes.string({
              sval: "customer_id"
            })]
          })
        }), t.nodes.resTarget({
          name: "total_sales",
          val: t.nodes.funcCall({
            funcname: [t.nodes.string({
              sval: "sum"
            })],
            args: [t.nodes.columnRef({
              fields: [t.nodes.string({
                sval: "amount"
              })]
            })]
          })
        }), t.nodes.resTarget({
          name: "avg_order_value",
          val: t.nodes.funcCall({
            funcname: [t.nodes.string({
              sval: "avg"
            })],
            args: [t.nodes.columnRef({
              fields: [t.nodes.string({
                sval: "amount"
              })]
            })]
          })
        })],
        fromClause: [t.nodes.rangeVar({
          relname: "orders",
          inh: true,
          relpersistence: "p"
        })],
        whereClause: t.nodes.aExpr({
          kind: "AEXPR_OP",
          name: [t.nodes.string({
            sval: ">="
          })],
          lexpr: t.nodes.columnRef({
            fields: [t.nodes.string({
              sval: "order_date"
            })]
          }),
          rexpr: t.nodes.aConst({
            sval: t.ast.sval({
              0: "2",
              1: "0",
              2: "2",
              3: "3",
              4: "-",
              5: "0",
              6: "1",
              7: "-",
              8: "0",
              9: "1"
            })
          })
        }),
        groupClause: [t.nodes.columnRef({
          fields: [t.nodes.string({
            sval: "customer_id"
          })]
        })],
        limitOption: "LIMIT_OPTION_DEFAULT",
        op: "SETOP_NONE"
      })
    }), t.nodes.commonTableExpr({
      ctename: "customer_rankings",
      ctequery: t.nodes.selectStmt({
        targetList: [t.nodes.resTarget({
          name: "customer_id",
          val: t.nodes.columnRef({
            fields: [t.nodes.string({
              sval: "customer_id"
            })]
          })
        }), t.nodes.resTarget({
          name: "total_sales",
          val: t.nodes.columnRef({
            fields: [t.nodes.string({
              sval: "total_sales"
            })]
          })
        }), t.nodes.resTarget({
          name: "sales_rank",
          val: t.nodes.windowFunc({
            winfnoid: 3133,
            wintype: 20,
            args: [],
            winref: 1,
            winstar: false,
            winagg: false
          })
        }), t.nodes.resTarget({
          name: "sales_percentile",
          val: t.nodes.windowFunc({
            winfnoid: 3974,
            wintype: 701,
            args: [],
            winref: 2,
            winstar: false,
            winagg: false
          })
        })],
        fromClause: [t.nodes.rangeVar({
          relname: "sales_summary",
          inh: true,
          relpersistence: "p"
        })],
        windowClause: [t.nodes.windowDef({
          name: "sales_window",
          orderClause: [t.nodes.sortBy({
            node: t.nodes.columnRef({
              fields: [t.nodes.string({
                sval: "total_sales"
              })]
            }),
            sortby_dir: "SORTBY_DESC",
            sortby_nulls: "SORTBY_NULLS_DEFAULT"
          })]
        })],
        limitOption: "LIMIT_OPTION_DEFAULT",
        op: "SETOP_NONE"
      })
    })],
    recursive: false
  }),
  op: "SETOP_NONE"
})"
`;

exports[`Enhanced AST generation with runtime schema — wrapped vs unwrapped nodes 1`] = `
"t.nodes.selectStmt({
  targetList: [t.nodes.resTarget({
    val: t.nodes.columnRef({
      fields: [t.nodes.aStar({})]
    })
  })],
  fromClause: [t.nodes.rangeVar({
    relname: "test_table",
    inh: true,
    relpersistence: "p"
  })],
  limitOption: "LIMIT_OPTION_DEFAULT",
  op: "SETOP_NONE"
})"
`;
